--- a/frontend/movies-app/src/app/pages/movies/movies.component.scss
+++ b/frontend/movies-app/src/app/pages/movies/movies.component.scss
@@ -11,6 +11,7 @@
 .movie-container {
   transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.01);
+  background-color: rgba(192, 216, 216, 0.6)
 }
 
 
