--- a/frontend/movies-app/src/styles.scss
+++ b/frontend/movies-app/src/styles.scss
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+  margin: 0;
+  font-family: Roboto, "Helvetica Neue", sans-serif;
+  background-image: url('assets/1154.jpg');
+  background-repeat: repeat;
+};
