--- a/frontend/movies-app/src/app/pages/movies/movies.component.html
+++ b/frontend/movies-app/src/app/pages/movies/movies.component.html
@@ -1,6 +1,12 @@
 <div class="container mt-5">
-  <h1 class="text-center mb-5">Movies list</h1>
-
+  <div class="mb-5 title-container">
+    <div class="d-flex flex-row mb-3">
+      <div class="title-start me-2"></div>
+      <h1 class="text-start mb-0">Movies list</h1>
+    </div>
+    <span>A Cinematic Journey Through Time and Genre.</span>
+    <hr class="divider me-5 mt-4" />
+  </div>
   <div class="my-5">
     <div class="movie-container container my-2"
         *ngFor="let movie of movies"
