--- a/frontend/movies-app/src/app/components/header/header.component.scss
+++ b/frontend/movies-app/src/app/components/header/header.component.scss
@@ -1,3 +1,8 @@
 .header-container {
-  background-color: #00b3b3
+  background-color: #00b3b3;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  z-index: 1000;
 }
+
