--- a/frontend/movies-app/src/app/pages/movies/movies.component.html
+++ b/frontend/movies-app/src/app/pages/movies/movies.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<div class="main-container container mt-5">
   <div class="mb-5 title-container">
     <div class="d-flex flex-row mb-3">
       <div class="title-start me-2"></div>
