--- a/frontend/movies-app/src/app/pages/movies/movies.component.html
+++ b/frontend/movies-app/src/app/pages/movies/movies.component.html
@@ -35,12 +35,12 @@
               <span>{{movie.revenue | number}} $</span>
             </div>
           </div>
-          <div class="d-none d-sm-block">
+          <div class="d-none d-md-block">
             <p>{{movie.description}}</p>
           </div>
         </div>
       </div>
-      <div class="d-sm-none mt-2">
+      <div class="d-md-none mt-2">
         <p>{{movie.description}}</p>
       </div>
     </div>
