--- a/frontend/movies-app/src/app/pages/movies/movies.component.scss
+++ b/frontend/movies-app/src/app/pages/movies/movies.component.scss
@@ -10,7 +10,7 @@
 
 .title-container {
   margin-top: 100px;
-  span {
+  .subtitle {
     color: #595959;
     font-style: italic;
   };
@@ -45,6 +45,11 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
+.form-container {
+  background-color: rgba(192, 216, 216, 0.6);
+  border-radius: 20px;
+}
+
 .pill-container {
   display: inline-block;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.05);
@@ -62,6 +67,15 @@ i {
   font-size: 24px;
 }
 
-span {
+.subtitle {
   font-size: 16px;
+}
+
+.jp-year-picker {
+  .mat-calendar-period-button {
+    pointer-events: none !important;
+  }
+  .mat-calendar-arrow {
+    display: none !important;
+  }
 }
