touchups, details modal, styling

--- a/frontend/movies-app/src/app/components/dialogs/movie-details-dialog/movie-details-dialog.component.html
+++ b/frontend/movies-app/src/app/components/dialogs/movie-details-dialog/movie-details-dialog.component.html
@@ -1,24 +1,45 @@
 <ng-container *ngIf="!isLoading">
   <h2>{{movie.title}}</h2>
   <div mat-dialog-content>
-    <div class="d-flex flex-column flex-md-row">
+    <div class="d-flex flex-row">
       <div class="d-flex align-items-center">
         <img  class="cover-image my-2 mx-auto"
                   [src]="movie.titleImage.imagePath" alt="Cover">
       </div>
-      <div class="ms-0 ms-md-4 mt-3">
-        <h5>Description</h5>
-        <p>
-          In the heart of the bustling city, where the rhythm of life pulsates through the crowded streets,
-          a solitary street musician stood beneath the glow of flickering neon lights.
-          With nimble fingers dancing across the strings of a weathered guitar,
-          the melodies he conjured seemed to weave through the urban chaos like a soothing balm. Passersby,
-          lost in the cacophony of their own thoughts, paused for a moment to absorb the transient magic.
-          The music became a transient bridge, connecting disparate lives in a harmonious interlude.
-          And as the night unfolded, the cityscape embraced this ephemeral serenade, echoing the symphony of the human experience.
-        </p>
+      <div class="ms-4 basic-info-container mt-4">
+        <div>
+          <span>
+            Type:
+          </span>
+          <h6>{{movie.movieTypeName}}</h6>
+        </div>
+        <div>
+          <span>
+            Release Date:
+          </span>
+          <h6>{{movie.releaseDate | date:'dd/MM/yyyy'}}</h6>
+        </div>
+        <div>
+          <span>
+            Duration:
+          </span>
+          <h6>{{movie.duration | durationPipe}}</h6>
+        </div>
+        <div>
+          <span>
+            Revenue:
+          </span>
+          <h6>{{movie.revenue | number}} $</h6>
+        </div>
       </div>
     </div>
+    <div class="mt-3">
+      <p>{{movie.description}}</p>
+    </div>
     <hr class="mx-5 my-3" />
+    <div>
+      <h5 class="mb-3">Abstract</h5>
+      <p>{{movie.abstractContent}}</p>
+    </div>
   </div>
 </ng-container>
