--- a/frontend/movies-app/src/app/components/dialogs/movie-details-dialog/movie-details-dialog.component.scss
+++ b/frontend/movies-app/src/app/components/dialogs/movie-details-dialog/movie-details-dialog.component.scss
@@ -1,9 +1,19 @@
 .cover-image {
-  width: 200px;
+  width: 250px;
 }
 
 @media (max-width: 576px) {
   .cover-image {
     width: 170px;
+  }
+}
+
+.basic-info-container {
+  span {
+    color: darkgray;
+    font-size: 16px;
+  }
+  h6 {
+    font-size: 18px;
   }
 }
