--- a/frontend/movies-app/src/app/pages/movies/movies.component.html
+++ b/frontend/movies-app/src/app/pages/movies/movies.component.html
@@ -9,12 +9,14 @@
     <h5>Filter by</h5>
     <div class="d-flex flex-column flex-sm-row">
       <button class="btn btn-primary rounded-pill d-inline-flex justify-content-center align-items-center mb-2 mb-sm-0"
-              (click)="getMoviesByRevenue()">
+              (click)="getMoviesByRevenue()"
+              [ngClass]="isRevenueFilterActive ? 'active' : ''">
         <i class="las la-funnel-dollar me-2"></i>
         <span>Top 10 Movies by Revenue</span>
       </button>
       <button class="btn btn-secondary rounded-pill d-inline-flex justify-content-center align-items-center ms-0 ms-sm-2 mb-2 mb-sm-0"
-              (click)="showYearForm()">
+              (click)="showYearForm()"
+              [ngClass]="isYearFilterActive ? 'active' : ''">
         <i class="las la-business-time me-2"></i>
         <span>Top 10 Movies by Revenue by Year</span>
       </button>
@@ -25,7 +27,7 @@
       </button>
     </div>
     <div class="d-flex justify-content-center justify-content-sm-start">
-      <div class="d-inline-flex flex-column justify-content-center align-items-center form-container px-5 pt-4 mt-2"
+      <div class="d-inline-flex flex-column justify-content-center align-items-center form-container px-5 pt-4 mt-4"
           *ngIf="showYearInput">
         <form [formGroup]="filterForm" >
           <app-year-picker
