added dialog loader

--- a/frontend/movies-app/src/app/components/dialogs/movie-details-dialog/movie-details-dialog.component.html
+++ b/frontend/movies-app/src/app/components/dialogs/movie-details-dialog/movie-details-dialog.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="!isLoading">
+<ng-container *ngIf="!isLoading; else loader">
   <h2>{{movie.title}}</h2>
   <div mat-dialog-content>
     <div class="d-flex flex-row">
@@ -43,3 +43,8 @@
     </div>
   </div>
 </ng-container>
+<ng-template #loader>
+  <div class="d-flex justify-content-center p-5" *ngIf="isLoading">
+    <img src="../../../assets/spinner.svg" alt="loading spinner">
+  </div>
+</ng-template>
